--- a/src/loading/Loading.module.css
+++ b/src/loading/Loading.module.css
@@ -1,16 +1,16 @@
 .loader {
   border: 8px solid #f3f3f3;
-  border-top: 8px solid #442772;
+  border-top: 8px solid var(--color);
   border-radius: 50%;
   width: 60px;
   height: 60px;
   animation: spin 2s linear infinite;
   margin: auto;
-}
+} 
 
 @keyframes spin {
   0% {
-    transform: rotate(0deg);
+    transform: rotate(0deg)
   }
   100% {
     transform: rotate(360deg);
